archive/apps/homepage/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: default
  labels:
    app: homepage
spec:
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  clusterIP: None
  selector:
    app: homepage
